test/compare/testdata/scripts/no_statement.script
// errorcheck

:  // ERROR `unexpected :, expected statement`
∞  // ERROR `invalid character U+221E '∞'`
}  // ERROR `unexpected }, expecting statement`

return  // ERROR `return statement outside function body`
